# fiuber-back-fastapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: dev-fiuber-back-fastapi.yml  prod-fiuber-back-fastapi.yml  python-app.yml
app/: config.py  main.py
app/database/: db.py
app/routers/: vowels.py
scripts/: sync_requirements.sh
tests/: test_main.py
